@@ -1,8 +1,14 @@
 package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.UserCreateDto;
+import ru.yandex.practicum.filmorate.dto.UserResponseDto;
+import ru.yandex.practicum.filmorate.dto.UserUpdateDto;
+import ru.yandex.practicum.filmorate.exception.EmailAlreadyTakenException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
@@ -10,29 +16,46 @@ import java.util.Collection;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserService {
+
     private final UserStorage userStorage;
 
-    public Collection<User> getAll() {
-        return userStorage.getAll();
+    public Collection<UserResponseDto> getAll() {
+        return userStorage.getAll().stream()
+                .map(UserMapper::mapToUserDto)
+                .collect(Collectors.toList());
     }
 
-    public User getUser(Long id) {
-        return userStorage.getUser(id);
+    public UserResponseDto getUser(Long id) {
+        User found = userStorage.getUser(id);
+        return UserMapper.mapToUserDto(found);
     }
 
-    public User create(User user) {
-        user.clearFriends();
-        return userStorage.create(user);
+    public UserResponseDto create(UserCreateDto userCreateDto) {
+        if (userStorage.isEmailUsed(userCreateDto.getEmail())) {
+            throw new EmailAlreadyTakenException(userCreateDto.getEmail());
+        }
+
+        User userToCreate = UserMapper.mapToUser(userCreateDto);
+        User created = userStorage.save(userToCreate);
+        if (created == null)
+            throw new IllegalStateException("Failed to save data for new user");
+        log.info("User was created: {}", created);
+        return UserMapper.mapToUserDto(created);
     }
 
-    public User update(User user) {
+    public UserResponseDto update(UserUpdateDto user) {
         User origin = userStorage.getUser(user.getId());
 
-        if (user.getEmail() != null)
+        if (user.getEmail() != null && !user.getEmail().equals(origin.getEmail())) {
+            if (userStorage.isEmailUsed(user.getEmail()))
+                throw new EmailAlreadyTakenException(user.getEmail());
+
             origin.setEmail(user.getEmail());
+        }
 
         if (user.getBirthday() != null)
             origin.setBirthday(user.getBirthday());
@@ -43,45 +66,43 @@ public class UserService {
         if (user.getLogin() != null)
             origin.setLogin(user.getLogin());
 
-        return userStorage.update(origin);
+        User updated = userStorage.update(origin);
+        if (updated == null)
+            throw new IllegalStateException("Не удалось сохранить данные для пользователя");
+
+        return UserMapper.mapToUserDto(updated);
     }
 
     public void addFriend(Long id, Long friendId) {
         if (id.equals(friendId))
             throw new ValidationException(id + " = " + friendId);
 
-        User user = userStorage.getUser(id);
-        User friend = userStorage.getUser(friendId);
-
-        user.addFriend(friendId);
-        friend.addFriend(id);
+        userStorage.addFriend(id, friendId);
     }
 
     public void removeFriend(Long id, Long friendId) {
-        User user1 = userStorage.getUser(id);
-        User user2 = userStorage.getUser(friendId);
+        if (id.equals(friendId))
+            throw new ValidationException(id + " = " + friendId);
 
-        user1.removeFriend(friendId);
-        user2.removeFriend(id);
+        userStorage.removeFriend(id, friendId);
     }
 
-    public Set<User> getCommonFriends(Long id, Long otherId) {
+    public Set<UserResponseDto> getCommonFriends(Long id, Long otherId) {
         if (id.equals(otherId))
             return Set.of();
 
-        Set<Long> friends1 = userStorage.getUser(id).getFriends();
-        Set<Long> friends2 = userStorage.getUser(otherId).getFriends();
-
-        return friends1.stream()
-                .filter(friends2::contains)
-                .map(userStorage::getUser)
+        Collection<User> commonFriends = userStorage.getCommonFriends(id, otherId);
+        return commonFriends.stream()
+                .map(UserMapper::mapToUserDto)
                 .collect(Collectors.toSet());
     }
 
-    public Collection<User> getFriends(Long id) {
-        User user = userStorage.getUser(id);
-        return user.getFriends().stream()
-                .map(userStorage::getUser)
-                .collect(Collectors.toList());
+    public Collection<UserResponseDto> getFriends(Long id) {
+
+        Collection<UserResponseDto> friends = userStorage.getFriendsOfUser(id).stream()
+                .map(UserMapper::mapToUserDto)
+                .toList();
+        log.debug("User id:{} has {} friends", id, friends.size());
+        return friends;
     }
 }
